# auto-spec-ai

./: .gitignore  Cargo.toml  README.md  system.md
src/: config.rs  main.rs  request.rs
